# customer-complaint-labeling

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  prompt.txt
data/: sample_chat.csv
src/: api_client.py  batch_processor.py  classifier.py  config_loader.py  main.py  prompt_manager.py  reporter.py  utils.py
tests/: test_api_client.py  test_batch_processor.py  test_config_loader.py
