[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "customer-complaint-labeling"
version = "1.0.0"
description = "AI-powered complaint labeling tool for customer service chat logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ryanchangggg" },
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.yaml"]

# ============================================================
# Ruff — linter & formatter
# ============================================================
[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle (optional but nice)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D107",  # missing docstring in __init__
]

[tool.ruff.format]
quote-style = "double"

# ============================================================
# Mypy — static type checking
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# ============================================================
# Coverage
# ============================================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
